--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,7 @@ matplotlib==3.5.1
 numpy==2.2.0
 pandas==1.2.0
 polars==1.17.1
-pytz==2022.7.1
 Requests==2.32.3
 seaborn==0.11.1
 streamlit==1.37.1
-tqdm==4.62.3
-~atplotlib==3.4.0
-~atplotlib==3.5.1
+datasets==2.16.1
