--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-matplotlib==3.5.1
-numpy==2.2.0
-pandas==1.2.0
-polars==1.17.1
+polars==1.6.0
 Requests==2.32.3
 seaborn==0.11.1
-streamlit==1.37.1
-datasets==2.16.1
+streamlit==1.10.0
+pandas==1.2.0
+streamlit-aggrid
+datasets==2.21.0
+lxml
